--- a/index_code.html
+++ b/index_code.html
@@ -8,8 +8,8 @@
   </head>
   <pre><code class="html">
 
-<object type="text/plain" data="index.html" >
-</object>
+<embed type="text/plain" data="index.html" >
+</embed>
 
 </code></pre>
   
