--- a/index_code.html
+++ b/index_code.html
@@ -8,7 +8,7 @@
   </head>
   <pre><code class="html">
 
-<embed type="text/plain" data="index.html" >
+<embed type="text/plain" src="index.html" >
 </embed>
 
 </code></pre>
