--- a/index_code.html
+++ b/index_code.html
@@ -5,11 +5,14 @@
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/styles/monokai-sublime.min.css">
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/highlight.min.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
+    
+    <script>
+var encodetxt=encodeURI(index.html);
+document.getElementById("code").innerHTML=encodetxt;
+    </script>
+    
   </head>
-  <pre><code class="html">
-
-<embed type="text/plain" src="index.html" >
-</embed>
+  <pre><code class="html" id="code">
 
 </code></pre>
   
