--- a/index_code.html
+++ b/index_code.html
@@ -12,7 +12,8 @@ document.getElementById("code").innerHTML=encodetxt;
     </script>
     
   </head>
-  <pre><code class="html" id="code">
+  <pre><code class="html">
+  <p id="code"></p>
 
 </code></pre>
   
