--- a/index_code.html
+++ b/index_code.html
@@ -7,8 +7,7 @@
 <script>hljs.initHighlightingOnLoad();</script>
     
     <script>
-var encodetxt=encodeURI(w-jd.github.io/HTML-gh-pages/index.html);
-document.getElementById("code").innerHTML=encodetxt;
+document.getElementById("code").innerHTML=encodeURI(w-jd.github.io/HTML-gh-pages/index.html);
     </script>
     
   </head>
