--- a/index_code.html
+++ b/index_code.html
@@ -8,8 +8,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     
   </head>
-  <pre><code class="html">
-  <p id="code"></p>
+  <pre><code class="html" id="code">
 </code></pre>
 <script>
 function htmlEncode(value){
