--- a/index_code.html
+++ b/index_code.html
@@ -4,7 +4,6 @@
   <head>
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/styles/monokai-sublime.min.css">
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/highlight.min.js"></script>
-<script>hljs.initHighlightingOnLoad();</script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     
   </head>
@@ -36,6 +35,7 @@ request.onreadystatechange = function() {
   if (request.readyState == 4)
 var htmlcode = htmlEncode(request.responseText)
 document.getElementById("code").innerHTML=htmlcode;
+hljs.initHighlightingOnLoad();
 };
 </script>
 </html>
