--- a/index_code.html
+++ b/index_code.html
@@ -5,37 +5,9 @@
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/styles/monokai-sublime.min.css">
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/highlight.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="code.js"></script>
     
   </head>
   <pre><code class="html" id="code">
 </code></pre>
-<script>
-function htmlEncode(value){
-  //create a in-memory div, set it's inner text(which jQuery automatically encodes)
-  //then grab the encoded contents back out.  The div never exists on the page.
-  return $('<div/>').text(value).html();
-}
-function htmlDecode(value){
-  return $('<div/>').html(value).text();
-}
-function makeHttpObject() {
-  try {return new XMLHttpRequest();}
-  catch (error) {}
-  try {return new ActiveXObject("Msxml2.XMLHTTP");}
-  catch (error) {}
-  try {return new ActiveXObject("Microsoft.XMLHTTP");}
-  catch (error) {}
-
-  throw new Error("Could not create HTTP request object.");
-}
-var request = makeHttpObject();
-request.open("GET", "https://w-jd.github.io/HTML-gh-pages/index.html", true);
-request.send(null);
-request.onreadystatechange = function() {
-  if (request.readyState == 4)
-var htmlcode = htmlEncode(request.responseText)
-document.getElementById("code").innerHTML=htmlcode;
-hljs.initHighlightingOnLoad();
-};
-</script>
 </html>
