Update and rename index_code.html to view_code.html

--- a/view_code.html
+++ b/view_code.html
@@ -1,5 +1,6 @@
 <!Doctype HTML>
-
+<!--W-JD 2016
+q756809891@gmail.com-->
 <html>
   <head>
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/styles/monokai-sublime.min.css">
@@ -7,9 +8,11 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script>
   var url="index.html"
+  var url = getParameterByName('url');
 </script>
+<script src="url.js"></script>
 <script src="code.js"></script>
-    
+
   </head>
   <pre><code class="html" id="code">
 </code></pre>
