--- a/view_code.html
+++ b/view_code.html
@@ -1,6 +1,7 @@
 <!Doctype HTML>
-<!--W-JD 2016
-q756809891@gmail.com-->
+<!--W-JD 2016 q756809891@gmail.com
+http://stackoverflow.com/questions/901115/how-can-i-get-query-string-values-in-javascript
+-->
 <html>
   <head>
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/styles/monokai-sublime.min.css">
