--- a/view_code.html
+++ b/view_code.html
@@ -14,6 +14,8 @@ http://stackoverflow.com/questions/901115/how-can-i-get-query-string-values-in-j
 <script src="code.js"></script>
 
   </head>
+ <body>
   <pre><code class="html" id="code">
 </code></pre>
+</body>
 </html>
