--- a/view_code.html
+++ b/view_code.html
@@ -9,7 +9,7 @@ http://stackoverflow.com/questions/901115/how-can-i-get-query-string-values-in-j
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="url.js"></script>
 <script>
-  var url = getParameterByName('url');
+ url = index.html
 </script>
 <script src="code.js"></script>
 
