--- a/view_code.html
+++ b/view_code.html
@@ -7,10 +7,9 @@ http://stackoverflow.com/questions/901115/how-can-i-get-query-string-values-in-j
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/styles/monokai-sublime.min.css">
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/highlight.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<!--<script src="url.js"></script>-->
+<script src="url.js"></script>
 <script>
-var url = "view_code.html";
-hljs.initHighlightingOnLoad();
+var url = getParameterByName('url');
 </script>
 <script src="code.js"></script>
 
