--- a/view_code.html
+++ b/view_code.html
@@ -9,6 +9,7 @@ http://stackoverflow.com/questions/901115/how-can-i-get-query-string-values-in-j
 <script src="url.js"></script>
 
 <script>
+hljs.initHighlightingOnLoad();
 var url = getParameterByName('src');
 </script>
 <script src="code.js"></script>
