--- a/view_code.html
+++ b/view_code.html
@@ -14,7 +14,7 @@ var url = getParameterByName('src');
 <script src="code.js"></script>
     
  <body>
-  <pre><code class="html" id="code">
+  <pre><code id="code">
 </code></pre>
 </body>
 </html>
