--- a/view_code.html
+++ b/view_code.html
@@ -12,9 +12,10 @@ http://stackoverflow.com/questions/901115/how-can-i-get-query-string-values-in-j
 var url = getParameterByName('src');
 </script>
 <script src="code.js"></script>
-    
+
  <body>
   <pre><code id="code" class="HTML">
+  <script src="code_.js"></script>
 </code></pre>
 </body>
 </html>
