--- a/view_code.html
+++ b/view_code.html
@@ -14,7 +14,7 @@ var url = getParameterByName('src');
 <script src="code.js"></script>
 
  <body>
-  <pre><code id="code">
+  <pre><code id="code" class="xml">
   <script src="code_.js"></script>
 </code></pre>
 </body>
