--- a/view_code.html
+++ b/view_code.html
@@ -10,6 +10,10 @@ http://stackoverflow.com/questions/901115/how-can-i-get-query-string-values-in-j
 
 <script>
 var url = getParameterByName('src');
+ 
+hljs.initHighlighting.called = false;
+hljs.initHighlightingOnLoad();
+
 </script>
 <script src="code.js"></script>
 <script src="code_.js"></script>
