--- a/view_code.html
+++ b/view_code.html
@@ -18,7 +18,7 @@ hljs.initHighlightingOnLoad();
 <script src="code.js"></script>
 <script src="code_.js"></script>
  <body>
-  <pre><code class="xml" id="code" >
+  <pre><code class="html" id="code" >
 </code></pre>
 </body>
 </html>
