--- a/view_code.html
+++ b/view_code.html
@@ -10,6 +10,7 @@ http://stackoverflow.com/questions/901115/how-can-i-get-query-string-values-in-j
 
 <script>
 var url = getParameterByName('src');
+ hljs.initHighlightingOnLoad();
 </script>
 <script src="code.js"></script>
 <script src="code_.js"></script>
@@ -19,6 +20,6 @@ var url = getParameterByName('src');
 </body>
  <script>
 hljs.initHighlighting.called = false;
-hljs.initHighlightingOnLoad();
+hljs.initHighlighting();
  </script>
 </html>
