--- a/view_code.html
+++ b/view_code.html
@@ -10,7 +10,6 @@ http://stackoverflow.com/questions/901115/how-can-i-get-query-string-values-in-j
 
 <script>
 var url = getParameterByName('src');
- hljs.initHighlightingOnLoad();
 </script>
 <script src="code.js"></script>
 <script src="code_.js"></script>
@@ -19,7 +18,8 @@ var url = getParameterByName('src');
 </code></pre>
 </body>
  <script>
+  setInterval(
 hljs.initHighlighting.called = false;
-hljs.initHighlighting();
+hljs.initHighlighting();, 1000);
  </script>
 </html>
