--- a/view_code.html
+++ b/view_code.html
@@ -19,7 +19,8 @@ var url = getParameterByName('src');
 </body>
  <script>
   setInterval(
-hljs.initHighlighting.called = false;
-hljs.initHighlighting();, 1000);
+function(){
+    hljs.initHighlighting.called = false
+    hljs.initHighlighting();}, 1000);
  </script>
 </html>
