--- a/view_code.html
+++ b/view_code.html
@@ -18,7 +18,7 @@ var url = getParameterByName('src');
 </code></pre>
 </body>
  <script>
-  setInterval(
+  setTimeout(
 function(){
     hljs.initHighlighting.called = false
     hljs.initHighlighting();}, 1000);
