--- a/view_code.html
+++ b/view_code.html
@@ -10,7 +10,7 @@ http://stackoverflow.com/questions/901115/how-can-i-get-query-string-values-in-j
 <script>
 var url = getParameterByName('src');
 </script>
- <script src="code.js"></script>
+ <script src="code-min.js"></script>
 
  <body>
   <pre><code class="html" id="code" >
