--- a/view_code.html
+++ b/view_code.html
@@ -6,11 +6,11 @@ http://stackoverflow.com/questions/901115/how-can-i-get-query-string-values-in-j
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/styles/monokai-sublime.min.css">
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/highlight.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src="url.js"></script>
+<script src="./JS/url.js"></script>
 <script>
 var url = getParameterByName('src');
 </script>
- <script src="code-min.js"></script>
+ <script src="./JS/code-min.js"></script>
 
  <body>
   <pre><code class="html" id="code">
