--- a/view_code.html
+++ b/view_code.html
@@ -13,7 +13,7 @@ var url = getParameterByName('src');
  <script src="./JS/code-min.js"></script>
 
  <body>
-  <pre><code class="html" id="code">
+  <pre><code id="code">
 </code></pre>
 </body>
  <script>
