--- a/view_code.html
+++ b/view_code.html
@@ -11,6 +11,28 @@ http://stackoverflow.com/questions/901115/how-can-i-get-query-string-values-in-j
 var url = getParameterByName('src');
 </script>
  <script src="./JS/code-min.js"></script>
+ 
+ <style type="text/css" media="screen">
+
+        body,
+        html {
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+        }
+
+        * {
+            padding: 0;
+            margin: 0;
+        }
+
+        iframe {
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            border: none;
+        }
+</style>
 
  <body>
   <pre><code id="code">
