--- a/view_code.html
+++ b/view_code.html
@@ -18,7 +18,7 @@ var url = getParameterByName('src');
         html {
             width: 100%;
             height: 100%;
-            overflow: hidden;
+            overflow: visible;
             border: none;
         }
 
