--- a/view_code.html
+++ b/view_code.html
@@ -19,6 +19,7 @@ var url = getParameterByName('src');
             width: 100%;
             height: 100%;
             overflow: visible;
+            overflow-y: visible;
             border: none;
         }
 
