--- a/HTML-ASSESSMENT/Superhero.html
+++ b/HTML-ASSESSMENT/Superhero.html
@@ -10,7 +10,7 @@
         <ul id=list>
             <li>
                 <b>Images:</b>
-                <img id=imageSuperman src=".\Supermanross.png" alt="Superman">
+                <img id=imageSuperman src=".\SupermanRoss.png" alt="Superman">
             </li>
             <li>
             <b>Superpower(s) they wield:</b>
