--- a/HTML-ASSESSMENT/Superhero.html
+++ b/HTML-ASSESSMENT/Superhero.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <blink><title>Superman</title></blink>
-        <link rel="stylesheet" href="Superhero.css">
+        <link rel="stylesheet" href=".\Superhero.css">
     </head>
     
     <body>
