--- a/Wang-WinterWonderland/Wang-WinterWonderland.html
+++ b/Wang-WinterWonderland/Wang-WinterWonderland.html
@@ -1,1 +1,26 @@
 <!DOCTYPE html>
+<html>
+  <head>
+    <title>Winter Wonderland Postcard</title>
+    <link rel="stylesheet" href="./styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Lato:400' rel='stylesheet' type='text/css'>
+  </head>
+
+  <body>
+    <div id='text-box'>
+      <h1>Happy Holiday!!</h1>
+      <ol>
+        <li>12345</li>
+        <li>54321</li>
+        <li>13579</li>
+        <li>24680</li>
+      </ol>
+      <ul>
+        <li>12345</li>
+        <li>54321</li>
+        <li>13579</li>
+        <li>24680</li>
+      </ul>
+    </div>
+  </body>
+</html>
