--- a/文件.html
+++ b/文件.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html>
 	<head>
@@ -9,7 +9,7 @@
 
 	<body>
 
-		<h1>JianDong's Webpage<h1>
+		<h1>JianDong's Webpage</h1>
 
 		<h3>Welcome to my homepage.</h3>		
 
