--- a/文件.html
+++ b/文件.html
@@ -18,15 +18,14 @@
 			<li>Javascript</li>
 		</ul>
 		<img alt="CSS" src="./image/CSS.jpg" width="120" height="120"/>
+		<div id='list'>
 		<h6>随便写写</h6>
 		<ol>
-			<li>a</li>
-			<li>b</li>
-			<li>c</li>
-			<li>d</li>
-			<li>e</li>
-			<li>f</li>
+			<li>我现在正在学习HTML</li>
+			<li>我现在正在学习CSS</li>
+
 		</ol>
+		</div>
 		<table>
 			<tr>
 				<th>Row 1, Column 1</th>
