--- a/文件.html
+++ b/文件.html
@@ -11,14 +11,17 @@
 		<h3>Welcome to my homepage.</h3>		
 
 		<p>欢迎来到我的主页。 这个网页是我在学校学习html时创建的。</p>
+		<div id='3.14'>
 		<img alt="HTML" src="./image/文件.png" width="120" height="120"/>
+		<div id='list1'>
 		<ul>
 			<li>HTML</li>
 			<li>CSS</li>
 			<li>Javascript</li>
 		</ul>
+		</div>
 		<img alt="CSS" src="./image/CSS.jpg" width="120" height="120"/>
-		<div id='list'>
+		<div id='list2'>
 		<h6>随便写写</h6>
 		<ol>
 			<li>我现在正在学习HTML</li>
@@ -26,6 +29,8 @@
 
 		</ol>
 		</div>
+		</div>
+		<div id='table'>
 		<table>
 			<tr>
 				<th>Row 1, Column 1</th>
@@ -53,6 +58,7 @@
 				<td>Row 5, Column 3</td>
 			</tr>
 		</table>
+		</div>
 
 	</body>
 </html>
