--- a/文件.html
+++ b/文件.html
@@ -12,7 +12,10 @@
 
 		<p>欢迎来到我的主页。 这个网页是我在学校学习html时创建的。</p>
 		<div id='3.14'>
-		<img alt="HTML" src="./image/文件.png" width="120" height="120"/>
+		<div id='images'>
+		<img alt="HTML" id='image1' src="./image/文件.png" width="120" height="120"/>
+		<img alt="CSS" id='image2' src="./image/CSS.jpg" width="120" height="120"/>
+		</div>
 		<div id='list1'>
 		<ul>
 			<li>HTML</li>
@@ -20,7 +23,6 @@
 			<li>Javascript</li>
 		</ul>
 		</div>
-		<img alt="CSS" src="./image/CSS.jpg" width="120" height="120"/>
 		<div id='list2'>
 		<h6>随便写写</h6>
 		<ol>
