--- a/文件.html
+++ b/文件.html
@@ -61,7 +61,11 @@
 			</tr>
 		</table>
 		</div>
-
+		<footer>
+			<p>JianDong Wang</p>
+			<p><a href="mailto:s.jiandong.wang@redclayschools.com"> s.jiandong.wang@redclayschools.com</a>.</p> 
+			<p>This webpage was created for Exploring Computer Science 2016-2017</p>
+		</footer>
 	</body>
 </html>
 
