--- a/extract.html
+++ b/extract.html
@@ -1,3 +1,4 @@
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
 var url = prompt("Please enter your URL", "https://www.hudl.com/video/2/239635/5ba37deb9680ca041835770a");
 var urlpatt = /"sources":\{(.*?)\}/g
